--- a/springboot/fastbee-admin/pom.xml
+++ b/springboot/fastbee-admin/pom.xml
@@ -38,9 +38,16 @@
         </dependency>
 
          <!-- Mysql驱动包 -->
+        <!--
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        -->
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
 
         <!-- 核心模块-->
