--- a/springboot/fastbee-admin/src/main/resources/application-dev.yml
+++ b/springboot/fastbee-admin/src/main/resources/application-dev.yml
@@ -17,10 +17,10 @@ spring:
       datasource:
         master:
           type: com.alibaba.druid.pool.DruidDataSource
-          driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://localhost/fastbee?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-          username: root
-          password: fastbee
+          driver-class-name: org.postgresql.Driver
+          url: jdbc:postgresql://172.18.105.21:5432/fastbee?useUnicode=true&characterEncoding=utf8&useSSL=true&autoReconnect=true&reWriteBatchedInserts=true
+          username: postgres
+          password: postgres
           druid:
             filters: stat,wall
             stat:
@@ -41,7 +41,7 @@ spring:
 
   # redis 配置
   redis:
-    host: localhost                         # 地址
+    host: 172.18.105.20                         # 地址
     port: 6379                              # 端口，默认为6379
     database: 15                             # 数据库索引
     password: fastbee                       # 密码
@@ -70,6 +70,10 @@ logging:
   level:
     com.fastbee: debug
     org.springframework: warn
+    com:
+      fastbee:
+        sip:
+          mapper: debug
 
 # Swagger配置
 swagger:
