--- a/springboot/fastbee-admin/src/main/resources/application.yml
+++ b/springboot/fastbee-admin/src/main/resources/application.yml
@@ -86,6 +86,11 @@ mybatis-plus:
   mapperLocations: classpath*:mapper/**/*Mapper.xml     # 配置mapper的扫描，找到所有的mapper.xml映射文件
   configLocation: classpath:mybatis/mybatis-config.xml  # 加载全局的配置文件
   global-config:
+    # 关闭驼峰命名自动映射
+    map-underscore-to-camel-case: false
+    # 设置对列名大小写敏感（可选，但建议加上）
+    #local-case-insensitive: false
+    #useActualColumnNames: true
     db-config:
       id-type: AUTO # 自增 ID
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
@@ -93,7 +98,7 @@ mybatis-plus:
 
 # PageHelper分页插件
 pagehelper:
-  helperDialect: mysql
+  helperDialect: postgresql
   supportMethodsArguments: true
   params: count=countSql
 
