--- a/springboot/fastbee-admin/src/main/resources/application-dev.yml
+++ b/springboot/fastbee-admin/src/main/resources/application-dev.yml
@@ -55,11 +55,11 @@ spring:
 
 # sip 配置
 sip:
-  enabled: false                            # 是否启用视频监控SIP，true为启用
+  enabled: true                            # 是否启用视频监控SIP，true为启用
   ## 本地调试时，绑定网卡局域网IP，设备在同一局域网，设备接入IP填写绑定IP
   ## 部署服务端时，默认绑定容器IP，设备接入IP填写服务器公网IP
   #ip: 177.7.0.13
-  ip: 192.168.5.27
+  ip: 10.1.1.75
   port: 5061                                # SIP端口(保持默认)
   domain: 3402000000                        # 由省级、市级、区级、基层编号组成
   id: 34020000002000000001                  # 同上，另外增加编号，(可保持默认)
